---------------------------------------------
Branch: feature/move_files

Features:
- Added core libraries to handle dotbot yaml files
- Added scripts in symlinks context to move files to DOTFILES_PATH see `dot symlinks link --help`, `dot symlinks edit --help`, `dot symlinks delete --help` y `dot symlinks restore --help`.
- Merged `feature/dotfiles_install` because needs this branch.

Fix:
- [Issue #76](https://github.com/CodelyTV/dotly/issues/76): Replacing files without asking

---------------------------------------------
Branch: feature/dotfiles_install

Features:
- Added a script to restore your dotfiles

---------------------------------------------
Branch: feature/marketplace3.0

Features:
- Added a way to search and install scripts from remote repository like if it were a market

---------------------------------------------
Branch: feature/dotly2.0

Features:
- Added a script to install remote scripts in the given context
- Added a way to add scripts from template

---------------------------------------------
Branch: feature/core

Features:
- Async autoupdater
- Init scripts
- Out of the .bashrc the dotly core loader
- Added some core libraries that are used in common in other PRs
- Added some other no core libraries that should be avaible form core when you develop any dotly script.
- Added fix permissions subcommand for zsh

Fixes:
- When execution `dot self update` automatically was switching to master branch even if you have installed from another branch.
- [Autocompletion on bash commands](https://github.com/CodelyTV/dotly/issues/93)
- Fix dot autocompletion for bash