@@ -1,27 +1,75 @@
 #!/usr/bin/env bash
 
-source "$DOTLY_PATH/scripts/core/_main.sh"
-source "$DOTLY_PATH/scripts/package/utils/dump.sh"
+. "$DOTLY_PATH/scripts/core/_main.sh"
+. "$DOTLY_PATH/scripts/package/utils/dump.sh"
 
 ##? Import previously dumped packages from:
 ##?  * Brew
 ##?  * Python
 ##?  * Volta or NPM
+##? 
+##? If you do not provide any option it will only ask you for a file of packages to restore
+##? if there is no file with the same name as the current hostname.
 ##?
 ##? Usage:
-##?   import
+##?   import [--prompt|-p|--never-prompt|-n]
+##?
+##? Options:
+##?   --prompt -p        You will be asked always for a file to restore in every package manager or lang
+##?   --never-prompt -n  You will never be asked for any file to restore, if there is no file with the
+##?                      same name as current hostname the package/lang is ignored and continue to try
+##?                      with next package
+##?
 docs::parse "$@"
 
-output::write "🎩 Let's import your packages (this could take a while)"
 
-platform::is_macos && output::header "Importing Brew apps from $HOMEBREW_DUMP_FILE_PATH" && package::brew_import
+# Define paths for package managers
+# Is defined this way because this enable the user to define a custom path
+BREW_PATH="${BREW_PATH:-$DOTFILES_PATH/os/mac/brew}"
+PYTHON_PATH="${PYTHON_PATH:-$DOTFILES_PATH/langs/python}"
+NPM_PATH="${NPM_PATH:-$DOTFILES_PATH/langs/js/npm}"
+VOLTA_PATH="${VOLTA_PATH:-$DOTFILES_PATH/langs/js/volta}"
 
-platform::command_exists pip3 && output::header "Importing Python apps from $PYTHON_DUMP_FILE_PATH" && package::python_import
+# Define default value for dump file if exist a file with same hostname
+HOMEBREW_DUMP_FILE_PATH="$(package::exists_dump_current_machine_file $BREW_PATH)"
+PYTHON_DUMP_FILE_PATH="$(package::exists_dump_current_machine_file $PYTHON_PATH)"
+NPM_DUMP_FILE_PATH="$(package::exists_dump_current_machine_file $NPM_PATH)"
+VOLTA_DUMP_FILE_PATH="$(package::exists_dump_current_machine_file $VOLTA_PATH)"
 
-if platform::command_exists volta; then
-    output::header "Importing Volta apps from $VOLTA_DUMP_FILE_PATH" && package::volta_import
-elif platform::command_exists npm; then
-    output::header "Importing NPM apps from $NPM_DUMP_FILE_PATH" && package::npm_import
+if ! $never_prompt; then
+  [[ -z "$HOMEBREW_DUMP_FILE_PATH" ]] || $prompt && package::which_file "$BREW_PATH" "Select Brewfile to import" "HOMEBREW_DUMP_FILE_PATH"
+  [[ -z "$PYTHON_DUMP_FILE_PATH" ]]   || $prompt && package::which_file "$PYTHON_PATH" "Select Python requirements file to import" "PYTHON_DUMP_FILE_PATH"
+  [[ -z "$NPM_DUMP_FILE_PATH" ]]      || $prompt && package::which_file "$NPM_PATH" "Select npm file of modules to import" "NPM_DUMP_FILE_PATH"
+  [[ -z "$VOLTA_DUMP_FILE_PATH" ]]    || $prompt && package::which_file "$VOLTA_PATH" "Select volta file to import" "VOLTA_DUMP_FILE_PATH"
 fi
 
+output::write "🎩 Let's import your packages (this could take a while)" && output::empty_line
+
+{ platform::command_exists brew && [[ -n "$HOMEBREW_DUMP_FILE_PATH" ]] &&\
+  output::header "Importing Brew apps from $HOMEBREW_DUMP_FILE_PATH" &&\
+  package::brew_import &&\
+  output::empty_line; } ||\
+    output::answer "Ignoring Brew"
+
+{ platform::command_exists pip3 && [[ -n "$PYTHON_DUMP_FILE_PATH" ]] &&\
+  output::empty_line &&\
+  output::header "Importing Python apps from $PYTHON_DUMP_FILE_PATH" &&\
+  package::python_import; } ||\
+    output::empty_line && output::answer "Ignoring the import of python packages"
+
+if platform::command_exists volta && [[ -n "$VOLTA_DUMP_FILE_PATH" ]]; then
+  output::empty_line &&\
+    output::header "Importing Volta apps from $VOLTA_DUMP_FILE_PATH" && output::empty_line &&\
+    package::volta_import "$VOLTA_DUMP_FILE_PATH"
+elif platform::command_exists npm && [[ -n "$NPM_DUMP_FILE_PATH" ]]; then
+  output::empty_line &&\
+    output::header "Importing NPM apps from $NPM_DUMP_FILE_PATH" && output::empty_line &&\
+    package::npm_import "$NPM_DUMP_FILE_PATH"
+else
+  output::empty_line &&\
+    output::answer "Ignoring the import of volta or npm packages"
+fi
+
+output::empty_line
 output::solution 'All packages imported'
+output::empty_line
