@@ -32,6 +32,7 @@ if $version; then
   exit
 fi
 
+
 if [ -n "${DOTLY_NO_INIT_SCRIPTS:-false}" ]; then
   output::error "Init scripts are disabled"
   exit 1
